# cliprec

./: README.md  pyproject.toml
src/cliprec/: __init__.py  __main__.py
