[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "cliprec"
authors = [
    {name = "Al Sweigart", email = "al@inventwithpython.com"},
]
description = "A cross-platform clipboard monitoring and recording tool. Uses pyperclip. Only works for text."
readme = "README.md"
keywords = ["clipboard"]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 3",
]
requires-python = ">=2.7"
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/asweigart/cliprec"
"Bug Tracker" = "https://github.com/asweigart/cliprec/issues"

[tool.setuptools.dynamic]
version = {attr = "cliprec.__version__"}

[tool.ruff]
line-length = 120
